test/errors/indexed_offsets_error/zs/array_in_array_expression_error.zs
package array_in_array_expression_error;

struct ArrayInArrayExpressionError
{
    uint32 array[];
    uint32 offsets[];
offsets[array[@index]]:
    string fields[];
};
